Project

General

Profile

Actions

Bug #65474

closed

mgr crash due to corrupted incremental osdmap sent by crimson-osds

Added by Xuehan Xu 25 days ago. Updated 18 days ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

    -7> 2024-04-13T11:24:09.815+0000 2b62b3608700  0 [rbd_support DEBUG root] TrashPurgeScheduleHandler: refresh_pools
    -6> 2024-04-13T11:24:09.815+0000 2b62b3608700  0 [rbd_support INFO root] TrashPurgeScheduleHandler: load_schedules
    -5> 2024-04-13T11:24:09.815+0000 2b62b3608700 20 mgr get_config  key: mgr/rbd_support/trash_purge_schedule
    -4> 2024-04-13T11:24:09.815+0000 2b62b3608700 10 mgr get_typed_config  trash_purge_schedule not found
    -3> 2024-04-13T11:24:09.816+0000 2b62b3608700  0 [rbd_support INFO root] load_schedules: rbd, start_after=
    -2> 2024-04-13T11:24:09.816+0000 2b62b3608700  1 -- 10.57.38.116:0/417118219 --> v2:10.57.38.116:6802/1335917220 -- osd_op(unknown.0.0:12 2.1 2:88c1567c:::rbd_trash_purge_s
chedule:head [omap-get-vals in=16b] snapc 0=[] ondisk+read+known_if_redirected+supports_pool_eio e101) -- 0xaf98000 con 0xaef5c00
    -1> 2024-04-13T11:24:09.818+0000 2b62ac5fa700  1 -- 10.57.38.116:0/417118219 <== osd.3 v2:10.57.38.116:6802/1335917220 2 ==== osd_map(101..126 src has 1..126) ==== 24586+0+
0 (crc 0 0 0) 0xb14c540 con 0xaef5c00
     0> 2024-04-13T11:24:09.820+0000 2b62ac5fa700 -1 *** Caught signal (Aborted) **
 in thread 2b62ac5fa700 thread_name:ms_dispatch

 ceph version 19.0.0-2541-g4fdfbc5452e (4fdfbc5452e99908f5c244607f5def9648b79ac3) squid (dev)
 1: /lib64/libpthread.so.0(+0x12ce0) [0x2b60f12b3ce0]
 2: gsignal()
 3: abort()
 4: /lib64/libstdc++.so.6(+0x9009b) [0x2b60ee97509b]
 5: /lib64/libstdc++.so.6(+0x9653c) [0x2b60ee97b53c]
 6: /lib64/libstdc++.so.6(+0x96597) [0x2b60ee97b597]
 7: /lib64/libstdc++.so.6(+0x967f8) [0x2b60ee97b7f8]
 8: (ceph::buffer::v15_2_0::list::iterator_impl<true>::copy(unsigned int, ceph::buffer::v15_2_0::list&)+0xb4) [0x2b60f0187754]
 9: (OSDMap::Incremental::decode(ceph::buffer::v15_2_0::list::iterator_impl<true>&)+0x3a2) [0x2b60f0283ef2]
 10: /lib64/librados.so.2(+0x163309) [0x2b60f286a309]
 11: /lib64/librados.so.2(+0x129e90) [0x2b60f2830e90]
 12: /lib64/librados.so.2(+0x12d6ab) [0x2b60f28346ab]
 13: /lib64/librados.so.2(+0xe0a09) [0x2b60f27e7a09]
 14: (Messenger::ms_deliver_dispatch(boost::intrusive_ptr<Message> const&)+0x3b8) [0x2b60f0036ef8]
 15: (DispatchQueue::entry()+0x657) [0x2b60f0034df7]
 16: (DispatchQueue::DispatchThread::entry()+0x11) [0x2b60f0103421]
 17: /lib64/libpthread.so.0(+0x81cf) [0x2b60f12a91cf]
 18: clone()
 NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.
Actions #1

Updated by Xuehan Xu 25 days ago

  • Pull request ID set to 56875
Actions #2

Updated by Matan Breizman 24 days ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Matan Breizman 18 days ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF